Fixed chrome image overflow. Add preload alert's image

--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,6 @@
   }
 }
 
-#root {
-  height: 100vh;
-}
-
 /* Scrollbar hidden */
 * {
   -ms-overflow-style: none;
